# kvasir_seo

./: .env.example  .gitignore  README.md  dataforseo_quizly_keyword_plan.md  pyproject.toml  requirements.txt
config/: languages.yaml  locations.yaml  scoring.yaml  sources.yaml
scripts/: 00_check_credentials.py  01_collect_quizly_pages.py  02_extract_candidate_terms.py  03_discover_keywords.py  04_enrich_search_volume.py  05_score_keywords.py  06_visualize.py  07_serp_intent.py  08_google_trends.py  _bootstrap.py  dev_sample_data.py
src/quizly_keywords/: __init__.py  cluster.py  dataforseo_client.py  discovery.py  normalize.py  quizly_site.py  scoring.py  serp.py  settings.py  storage.py  text_extract.py  trends.py  visualize.py  volume.py
