[project]
name = "kvasir-seo"
version = "0.1.0"
description = "DataForSEO-driven keyword research pipeline for quizly.pub"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
